dataset1235/2025-2/610742602/users/1343319280/executions/677928262_2819779400.log
== RUN (2025-08-25 19:02:10)
-- CODE: 
# Entrada

quantidade_jogos = float(input("Qual a quantidade de jogos a serem comprados? "))
valor_unitario = float(input("Qual o valor unitário de cada jogo? "))
valor_frete = float(input("Qual o valor do frete? "))

total_jogos = quantidade_jogos * valor_unitario
total_frete = total_jogos + valor_frete

# Saída 
print(total_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:51:53)
-- CODE: 
# Entrada
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")

# Saída 
    print(input(quantidade_jogos + valor_unitario + valor_frete))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:52:14)
-- CODE: 
# Entrada
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")

# Saída 
print((quantidade_jogos + valor_unitario + valor_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:52:15)
-- CODE: 
# Entrada
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")

# Saída 
print((quantidade_jogos + valor_unitario + valor_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 7
    print((quantidade_jogos + valor_unitario + valor_frete)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:47:41)
-- CODE: 
# Entrada
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:47:08)
-- CODE: 
# Entrada

quantidade_jogos = float(input("Qual a quantidade de jogos a serem comprados? "))
valor_unitario = float(input("Qual o valor unitário de cada jogo? "))
valor_frete = float(input("Qual o valor do frete? "))

total_jogos = quantidade_jogos * valor_unitario
total_frete = total_jogos + valor_frete

# Saída 
print(total_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:41:59)
-- CODE: 
# Entrada
quantidade_jogos = input("Quantidade de jogos a serem comprados:")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem comprados:
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem comprados:
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem comprados:
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem comprados:
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem comprados:
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem comprados:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:56:13)
-- CODE: 
# Entrada
var = input("Instruções:")
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")

# Saída 
print(quantidade_jogos + valor_unitario + valor_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:40:45)
-- CODE: 
# Entrada

quantidade_jogos = float(input("Qual a quantidade de jogos a serem comprados? "))
valor_unitario = float(input("Qual o valor unitário de cada jogo? "))
valor_frete = float(input("Qual o valor do frete? "))

total_jogos = quantidade_jogos * valor_unitario
total_frete = total_jogos + valor_frete

# Saída 
print( total_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:52:20)
-- CODE: 
# Entrada
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")

# Saída 
print(quantidade_jogos + valor_unitario + valor_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 10159.9043.50
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 246975.0321.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 5100.040.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 1067.095.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 350.012.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 1245.078.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:45:55)
-- CODE: 
# Entrada

quantidade_jogos = float(input("Qual a quantidade de jogos a serem comprados? "))
valor_unitario = float(input("Qual o valor unitário de cada jogo? "))
valor_frete = float(input("Qual o valor do frete? "))

total_jogos = quantidade_jogos * valor_unitario
total_frete = total_jogos + valor_frete

# Saída 
print('Preço total:'+total_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print('Preço total:'+total_frete)
          ~~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print('Preço total:'+total_frete)
          ~~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print('Preço total:'+total_frete)
          ~~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print('Preço total:'+total_frete)
          ~~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print('Preço total:'+total_frete)
          ~~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print('Preço total:'+total_frete)
          ~~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:00:35)
-- CODE: 
# Entrada

quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")

total_jogos = quantidade_jogos * valor_unitario
total_frete = total_jogos + valor_frete

# Saída 
print(total_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total_jogos = quantidade_jogos * valor_unitario
                  ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total_jogos = quantidade_jogos * valor_unitario
                  ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total_jogos = quantidade_jogos * valor_unitario
                  ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total_jogos = quantidade_jogos * valor_unitario
                  ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total_jogos = quantidade_jogos * valor_unitario
                  ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total_jogos = quantidade_jogos * valor_unitario
                  ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:49:42)
-- CODE: 
# Entrada
Q = quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
U = valor_unitario = input("Qual o valor unitário de cada jogo? ")
F = valor_frete = input("Qual o valor do frete? ")

# Saída 
  print(input(Q+U+F))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 7
    print(input(Q+U+F))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 7
    print(input(Q+U+F))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 7
    print(input(Q+U+F))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 7
    print(input(Q+U+F))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 7
    print(input(Q+U+F))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 7
    print(input(Q+U+F))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:41:01)
-- CODE: 
# Entrada

quantidade_jogos = float(input("Qual a quantidade de jogos a serem comprados? "))
valor_unitario = float(input("Qual o valor unitário de cada jogo? "))
valor_frete = float(input("Qual o valor do frete? "))

total_jogos = quantidade_jogos * valor_unitario
total_frete = total_jogos + valor_frete

# Saída 
print( total_frete)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:47:34)
-- CODE: 
# Entrada

quantidade_jogos = float(input("Qual a quantidade de jogos a serem comprados? "))
valor_unitario = float(input("Qual o valor unitário de cada jogo? "))
valor_frete = float(input("Qual o valor do frete? "))

total_jogos = quantidade_jogos * valor_unitario
total_frete = total_jogos + valor_frete

# Saída 
print("total"+total_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("total"+total_frete)
          ~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("total"+total_frete)
          ~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("total"+total_frete)
          ~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("total"+total_frete)
          ~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("total"+total_frete)
          ~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("total"+total_frete)
          ~~~~~~~^~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:51:55)
-- CODE: 
# Entrada
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")

# Saída 
    print(input(quantidade_jogos + valor_unitario + valor_frete))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:40:47)
-- CODE: 
# Entrada

quantidade_jogos = float(input("Qual a quantidade de jogos a serem comprados? "))
valor_unitario = float(input("Qual o valor unitário de cada jogo? "))
valor_frete = float(input("Qual o valor do frete? "))

total_jogos = quantidade_jogos * valor_unitario
total_frete = total_jogos + valor_frete

# Saída 
print( total_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo? Qual o valor do frete? 618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:44:57)
-- CODE: 
# Entrada
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Qual a quantidade de jogos a serem comprados? Qual o valor unitário de cada jogo?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:51:56)
-- CODE: 
# Entrada
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")

# Saída 
    print(input(quantidade_jogos + valor_unitario + valor_frete))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:56:12)
-- CODE: 
# Entrada
var = input("Instruções:")
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")

# Saída 
print(quantidade_jogos + valor_unitario + valor_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:42:06)
-- CODE: 
# Entrada
quantidade_jogos = input("Quantidade de jogos a serem comprados:")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem comprados:
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem comprados:
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem comprados:
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem comprados:
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem comprados:
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem comprados:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:56:06)
-- CODE: 
# Entrada
var = input("Instruções:")
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")

# Saída 
print(quantidade_jogos + valor_unitario + valor_frete)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_frete = input("Qual o valor do frete? ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:51:56)
-- CODE: 
# Entrada
quantidade_jogos = input("Qual a quantidade de jogos a serem comprados? ")
valor_unitario = input("Qual o valor unitário de cada jogo? ")
valor_frete = input("Qual o valor do frete? ")

# Saída 
    print(input(quantidade_jogos + valor_unitario + valor_frete))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 7
    print(input(quantidade_jogos + valor_unitario + valor_frete))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
